--- a/.env.example
+++ b/.env.example
@@ -9,30 +9,30 @@ NODE_ENV=development
 
 # MongoDB Replica Set (3 узла для Change Streams)
 MONGO_USER=admin
-MONGO_PASSWORD=changeme
+MONGO_PASSWORD=<YOUR_MONGO_PASSWORD>
 MONGO_DB=trainingground
 # Подключение к replica set (все 3 ноды)
-MONGODB_URI=mongodb://admin:changeme@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
+MONGODB_URI=mongodb://admin:<YOUR_MONGO_PASSWORD>@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
 MONGODB_DATABASE=trainingground
 
 # Redis (кеш и сессии)
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=changeme
+REDIS_PASSWORD=<YOUR_REDIS_PASSWORD>
 
 # Qdrant (векторная БД)
 QDRANT_URL=http://localhost:6333
-QDRANT_API_KEY=
+QDRANT_API_KEY=<YOUR_QDRANT_API_KEY>
 
 # Rust API (основной API)
 RUST_API_PORT=8080
 RUST_API_HOST=0.0.0.0
-JWT_SECRET=your-secret-key-change-in-production
+JWT_SECRET=<YOUR_JWT_SECRET_GENERATE_WITH_openssl_rand_base64_32>
 
 # Python Generator (генератор заданий / Explanation API)
 PYTHON_API_PORT=9000
-YANDEXGPT_API_KEY=
-YANDEXGPT_FOLDER_ID=
+YANDEXGPT_API_KEY=<YOUR_YANDEXGPT_API_KEY>
+YANDEXGPT_FOLDER_ID=<YOUR_YANDEX_FOLDER_ID>
 YANDEXGPT_MODEL=yandexgpt-lite
 YANDEXGPT_TEMPERATURE=0.2
 YANDEXGPT_MAX_TOKENS=700
@@ -52,6 +52,27 @@ LOG_LEVEL=info
 ENABLE_SSO=false
 ENABLE_YANDEX_GPT=true
 ENABLE_ANTICHEAT=true
- 
+
+# Object Storage (report exports)
+OBJECT_STORAGE_BUCKET=<YOUR_BUCKET_NAME>
+OBJECT_STORAGE_REGION=ru-central1
+OBJECT_STORAGE_ENDPOINT=<YOUR_ENDPOINT_URL>
+OBJECT_STORAGE_ACCESS_KEY=<YOUR_ACCESS_KEY>
+OBJECT_STORAGE_SECRET_KEY=<YOUR_SECRET_KEY>
+OBJECT_STORAGE_REPORTS_PREFIX=reports/dev
+
+# Reporting defaults
+REPORTING_SIGNED_URL_TTL_HOURS=24
+REPORTING_EXPORT_TTL_HOURS=24
+REPORTING_EXPORT_RATE_LIMIT_PER_HOUR=5
+REPORTING_LIVE_POLLING_INTERVAL_SECS=30
+REPORTING_ENABLE_LIVE_UPDATES=true
+REPORTING_EXPORT_WORKER_INTERVAL_SECS=60
+REPORTING_WORKER_INTERVAL_SECS=3600
+
 # Пароль администратора Grafana
-GRAFANA_PASSWORD=
+GRAFANA_PASSWORD=<YOUR_GRAFANA_PASSWORD>
+
+# Metrics endpoint authentication (format: username:password)
+# Used for HTTP Basic Auth on /metrics endpoint
+METRICS_AUTH=prometheus:<YOUR_METRICS_PASSWORD>
