--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=<YOUR_REDIS_PASSWORD>
 
+CONTENT_STREAM_NAME=content:changes
+
 # Qdrant (векторная БД)
 QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=<YOUR_QDRANT_API_KEY>
@@ -76,3 +78,6 @@ GRAFANA_PASSWORD=<YOUR_GRAFANA_PASSWORD>
 # Metrics endpoint authentication (format: username:password)
 # Used for HTTP Basic Auth on /metrics endpoint
 METRICS_AUTH=prometheus:<YOUR_METRICS_PASSWORD>
+
+# Superuser bootstrap seed file (keep this path outside git, file ignored via .gitignore)
+ADMIN_SEED_FILE=infra/config/seed/admin-superuser.json
