--- a/backend/rust-api/Cargo.toml
+++ b/backend/rust-api/Cargo.toml
@@ -31,7 +31,6 @@ hyper = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.147"
 
-# Database clients
 mongodb = "3.4.1"
 redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager", "script", "aio"] }
 
@@ -61,12 +60,15 @@ hex = "0.4"
 percent-encoding = "2.3"
 url = "2.5"
 
+regex = "1.10"
+
 # Validation
 validator = { version = "0.20.0", features = ["derive"] }
 
 # Crypto & Random
 rand = "0.9.2"
 base64 = "0.22"
+bcrypt = "0.15"
 
 # JWT & Auth
 # SECURITY NOTE: cargo audit показывает RUSTSEC-2023-0071 в rsa 0.9.9 (Marvin timing attack)
