SD-07: MongoDB keyfile аутентификация replica set

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ MONGO_DB=trainingground
 # Подключение к replica set (все 3 ноды)
 MONGODB_URI=mongodb://admin:<YOUR_MONGO_PASSWORD>@localhost:27017,localhost:27018,localhost:27019/trainingground?authSource=admin&replicaSet=rs0
 MONGODB_DATABASE=trainingground
+# MongoDB keyfile for replica set authentication (generate with: scripts/generate_mongo_keyfile.ps1)
+MONGO_KEYFILE_PATH=./infra/mongo-keyfile.secure
 
 # Redis (кеш и сессии)
 REDIS_HOST=localhost
@@ -27,6 +29,8 @@ QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=<YOUR_QDRANT_API_KEY>
 
 # Rust API (основной API)
+APP_ENV=dev
+RUST_LOG=info
 RUST_API_PORT=8080
 RUST_API_HOST=0.0.0.0
 JWT_SECRET=<YOUR_JWT_SECRET_GENERATE_WITH_openssl_rand_base64_32>
