--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Конфигурация окружения для TrainingGround
+# Development: cp .env.example .env (localhost, тестовые пароли)
+# Production: cp .env.example .env (strong passwords, vault DNS names)
 
 # Docker Compose профили (monitoring включает Prometheus, Grafana, Jaeger, Exporters)
 # Оставьте пустым для основных сервисов, используйте "monitoring" для полного стека
@@ -33,7 +35,35 @@ APP_ENV=dev
 RUST_LOG=info
 RUST_API_PORT=8080
 RUST_API_HOST=0.0.0.0
+
+# JWT Authentication
 JWT_SECRET=<YOUR_JWT_SECRET_GENERATE_WITH_openssl_rand_base64_32>
+JWT_ACCESS_TOKEN_TTL_SECONDS=3600
+JWT_REFRESH_TOKEN_TTL_SECONDS=2592000
+
+# Cookie Security
+COOKIE_SECURE=true
+COOKIE_SAME_SITE=Strict
+
+# Rate Limiting (защита от brute force)
+RATE_LIMIT_DISABLED=false
+RATE_LIMIT_PER_USER=100
+RATE_LIMIT_PER_IP=200
+RATE_LIMIT_LOGIN_ATTEMPTS=10
+RATE_LIMIT_REGISTER_ATTEMPTS=5
+
+# HashiCorp Vault (управление секретами и ключами шифрования)
+VAULT_ADDR=http://localhost:8200
+VAULT_ROOT_TOKEN=<YOUR_VAULT_ROOT_TOKEN>
+# AppRole credentials для приложения (получить после запуска init-mongodb-encryption.sh)
+VAULT_ROLE_ID=<YOUR_VAULT_ROLE_ID>
+VAULT_SECRET_ID=<YOUR_VAULT_SECRET_ID>
+
+# MongoDB Encryption at Rest (CSFLE - Client-Side Field Level Encryption)
+MONGODB_ENCRYPTION_ENABLED=false
+MONGODB_ENCRYPTION_PROVIDER=vault
+# Для dev/testing можно использовать local provider (НЕ БЕЗОПАСНО для production!)
+MONGODB_ENCRYPTION_LOCAL_MODE=false
 
 # Python Generator (генератор заданий / Explanation API)
 PYTHON_API_PORT=9000
