--- a/infra/nginx/conf.d/trainingground.conf
+++ b/infra/nginx/conf.d/trainingground.conf
@@ -52,11 +52,19 @@ server {
     # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    # Используем российские DNS резолверы (Yandex DNS) для соответствия ФЗ-152
+    resolver 77.88.8.8 77.88.8.1 valid=300s;
     resolver_timeout 5s;
 
     # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    # HSTS: принудительное использование HTTPS (ФЗ-152 требует защиты ПД)
+    # max-age=31536000 (1 год) - браузер запоминает требование HTTPS
+    # includeSubDomains - применяется ко всем поддоменам
+    # ПРИМЕЧАНИЕ: Директива 'preload' удалена для соответствия законодательству РФ.
+    #   HSTS Preload List (hstspreload.org) управляется Google (США), что может
+    #   противоречить требованиям локализации данных по ФЗ-152.
+    #   Защита от MITM-атак обеспечивается через HSTS с max-age + 301 редирект.
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
@@ -80,7 +88,8 @@ server {
             add_header Cache-Control "public, immutable";
 
             # Re-add security headers (add_header in nested location overrides parent)
-            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+            # HSTS without preload for ФЗ-152 compliance (consistent with parent location)
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
             add_header X-Frame-Options "DENY" always;
             add_header X-Content-Type-Options "nosniff" always;
         }
