--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,32 @@ services:
     networks:
       - trainingground-network
 
+  # HashiCorp Vault — управление секретами и ключами шифрования
+  vault:
+    image: hashicorp/vault:1.15
+    container_name: trainingground-vault
+    restart: unless-stopped
+    ports:
+      - "8200:8200"
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: ${VAULT_ROOT_TOKEN:-dev-root-token}
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+      # В production использовать реальное хранилище (Consul, etcd, PostgreSQL)
+      VAULT_LOCAL_CONFIG: '{"backend": {"file": {"path": "/vault/file"}}, "default_lease_ttl": "168h", "max_lease_ttl": "720h", "ui": true}'
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - vault_data:/vault/file
+      - ./infra/vault:/vault/config
+    networks:
+      - trainingground-network
+    command: server -dev
+    healthcheck:
+      test: ["CMD", "vault", "status"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
   # Rust API — сервис выполнения уроков (A2)
   rust-api:
     build:
@@ -317,5 +343,6 @@ volumes:
   mongodb_secondary2_data:
   redis_data:
   qdrant_data:
+  vault_data:
   prometheus_data:
   grafana_data:
