--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && tsx scripts/post-build-sri.ts",
+    "build:no-sri": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -39,13 +40,19 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.11.0",
+    "@chromatic-com/storybook": "^4.1.3",
     "@open-wc/testing": "^4.0.0",
     "@open-wc/testing-helpers": "^3.0.1",
     "@playwright/test": "^1.48.0",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-vitest": "^10.1.10",
+    "@storybook/web-components-vite": "^10.1.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^25.0.3",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "@vitest/browser-playwright": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "@web/dev-server-esbuild": "^1.0.4",
     "@web/test-runner": "^0.20.2",
@@ -58,23 +65,18 @@
     "eslint-plugin-lit": "^2.1.1",
     "eslint-plugin-lit-a11y": "^4.1.1",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-storybook": "^10.1.10",
     "eslint-plugin-wc": "^3.0.2",
     "fake-indexeddb": "^6.0.1",
     "happy-dom": "^20.0.11",
     "lighthouse": "^13.0.1",
     "playwright": "^1.48.0",
     "prettier": "^3.4.2",
+    "storybook": "^10.1.10",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2",
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^4.0.16",
-    "storybook": "^10.1.10",
-    "@storybook/web-components-vite": "^10.1.10",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.10",
-    "@storybook/addon-a11y": "^10.1.10",
-    "@storybook/addon-docs": "^10.1.10",
-    "eslint-plugin-storybook": "^10.1.10",
-    "@vitest/browser-playwright": "^4.0.16"
+    "vitest": "^4.0.16"
   }
 }
