--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,9 @@ EXPLANATION_YANDEXGPT_ENABLED=1
 # Frontend (PWA)
 VITE_API_URL=http://localhost:8080
 VITE_WS_URL=ws://localhost:8080
+VITE_BACKEND_ORIGIN=http://localhost:8081
+VITE_API_BASE=http://localhost:8081/api/v1
+VITE_ADMIN_BASE=http://localhost:8081/admin
 
 # Логирование
 LOG_LEVEL=info
