--- a/backend/rust-api/Cargo.toml
+++ b/backend/rust-api/Cargo.toml
@@ -46,6 +46,7 @@ time = "0.3"
 
 # HTTP client
 reqwest = { version = "0.12.28", features = ["json"] }
+lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 
 # Object storage / cloud integrations
 hmac = "0.12"
@@ -62,7 +63,7 @@ validator = { version = "0.20.0", features = ["derive"] }
 # Crypto & Random
 rand = "0.9.2"
 base64 = "0.22"
-bcrypt = "0.15"
+bcrypt = "0.17.1"
 
 # JWT & Auth
 # SECURITY NOTE: cargo audit показывает RUSTSEC-2023-0071 в rsa 0.9.9 (Marvin timing attack)
