--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "dompurify": "^3.0.5",
+    "marked": "^17.0.1",
     "idb": "^8.0.1",
     "lit": "^3.1.4",
     "nanoid": "^5.0.7",
@@ -39,6 +41,7 @@
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@axe-core/playwright": "^4.11.0",
     "@chromatic-com/storybook": "^4.1.3",
     "@open-wc/testing": "^4.0.0",
