--- a/backend/rust-api/Cargo.toml
+++ b/backend/rust-api/Cargo.toml
@@ -47,6 +47,8 @@ time = "0.3"
 # HTTP client
 reqwest = { version = "0.12.28", features = ["json"] }
 lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
+printpdf = "0.8.2"
+rust_xlsxwriter = "0.92.2"
 
 # Object storage / cloud integrations
 hmac = "0.12"
