--- a/.env.example
+++ b/.env.example
@@ -38,12 +38,14 @@ RUST_API_HOST=0.0.0.0
 
 # JWT Authentication
 JWT_SECRET=<YOUR_JWT_SECRET_GENERATE_WITH_openssl_rand_base64_32>
+JWT_FALLBACK_SECRETS=
 JWT_ACCESS_TOKEN_TTL_SECONDS=3600
 JWT_REFRESH_TOKEN_TTL_SECONDS=2592000
 
 # Cookie Security
 COOKIE_SECURE=true
 COOKIE_SAME_SITE=Strict
+CSRF_ALLOWED_ORIGINS=http://localhost:8081,http://localhost:4173
 
 # Rate Limiting (защита от brute force)
 RATE_LIMIT_DISABLED=false
@@ -91,6 +93,16 @@ LOG_LEVEL=info
 ENABLE_SSO=false
 ENABLE_YANDEX_GPT=true
 ENABLE_ANTICHEAT=true
+
+# Античит-оповещения
+ANTICHEAT_TELEGRAM_BOT_TOKEN=
+ANTICHEAT_TELEGRAM_CHAT_ID=
+ANTICHEAT_INCIDENT_WEBHOOK_URL=
+
+# Alertmanager webhook/Telegram
+ALERTMANAGER_TELEGRAM_BOT_TOKEN=
+ALERTMANAGER_TELEGRAM_CHAT_ID=
+ALERTMANAGER_WEBHOOK_URL=
 
 # Object Storage (report exports)
 OBJECT_STORAGE_BUCKET=<YOUR_BUCKET_NAME>
