--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -299,6 +299,84 @@ services:
           cpus: '1'
           memory: 2G
 
+  # ============================================
+  # Observability: Prometheus + Alertmanager + Grafana + Loki
+  # ============================================
+  prometheus:
+    image: prom/prometheus:v2.48.0
+    container_name: trainingground-prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./infra/prometheus/rules:/etc/prometheus/rules:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - trainingground-network
+
+  alertmanager:
+    image: prom/alertmanager:v0.27.0
+    container_name: trainingground-alertmanager
+    restart: unless-stopped
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./infra/prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+    networks:
+      - trainingground-network
+    depends_on:
+      - prometheus
+
+  grafana:
+    image: grafana/grafana:10.2.2
+    container_name: trainingground-grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin}
+      GF_INSTALL_PLUGINS: redis-datasource
+    volumes:
+      - ./infra/grafana/provisioning:/etc/grafana/provisioning
+      - ./infra/grafana/dashboards:/var/lib/grafana/dashboards
+      - grafana_data:/var/lib/grafana
+    networks:
+      - trainingground-network
+    depends_on:
+      - prometheus
+
+  loki:
+    image: grafana/loki:2.9.4
+    container_name: trainingground-loki
+    restart: unless-stopped
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/config.yml
+    volumes:
+      - ./infra/loki/loki-config.yml:/etc/loki/config.yml:ro
+      - loki_data:/loki
+    networks:
+      - trainingground-network
+
+  promtail:
+    image: grafana/promtail:2.9.4
+    container_name: trainingground-promtail
+    restart: unless-stopped
+    volumes:
+      - ./infra/loki/promtail-config.yml:/etc/promtail/config.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/log:/var/log:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - trainingground-network
+    depends_on:
+      - loki
+
 # ============================================
 # Networks
 # ============================================
@@ -326,4 +404,8 @@ volumes:
   vault_data:
     driver: local
   prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
+  loki_data:
     driver: local
