--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -222,12 +222,60 @@ services:
       - "9090:9090"
     volumes:
       - ./infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./infra/prometheus/rules:/etc/prometheus/rules:ro
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
     networks:
       - trainingground-network
+
+  # Alertmanager — маршрутизация SLA-алертов
+  alertmanager:
+    image: prom/alertmanager:v0.27.0
+    container_name: trainingground-alertmanager
+    profiles: ["monitoring"]
+    restart: unless-stopped
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./infra/prometheus/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+    networks:
+      - trainingground-network
+    depends_on:
+      - prometheus
+
+  # Loki — централизованный сбор логов
+  loki:
+    image: grafana/loki:2.9.4
+    container_name: trainingground-loki
+    profiles: ["monitoring"]
+    restart: unless-stopped
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/config.yml
+    volumes:
+      - ./infra/loki/loki-config.yml:/etc/loki/config.yml:ro
+      - loki_data:/loki
+    networks:
+      - trainingground-network
+
+  # Promtail — доставляет логи контейнеров в Loki
+  promtail:
+    image: grafana/promtail:2.9.4
+    container_name: trainingground-promtail
+    profiles: ["monitoring"]
+    restart: unless-stopped
+    volumes:
+      - ./infra/loki/promtail-config.yml:/etc/promtail/config.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/log:/var/log:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - trainingground-network
+    depends_on:
+      - loki
 
   # Jaeger — distributed tracing
   jaeger:
@@ -343,4 +391,5 @@ volumes:
   qdrant_data:
   prometheus_data:
   grafana_data:
+  loki_data:
 
