--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,9 @@ YANDEXGPT_TIMEOUT_SECONDS=2.0
 # Опционально: переопределить системный промпт
 # YANDEXGPT_SYSTEM_PROMPT=Ты — преподаватель русского языка. Объясняй ошибки кратко, с примерами и отсылками к правилам.
 EXPLANATION_YANDEXGPT_ENABLED=1
+TEMPLATE_INSTANCE_CACHE_TTL_SECONDS=600
+TEMPLATE_SEEN_TASKS_TTL_SECONDS=86400
+TEMPLATE_GENERATION_LIMIT=20
 
 # Frontend (PWA)
 VITE_API_URL=http://localhost:8080
