--- a/backend/python-generator/pyproject.toml
+++ b/backend/python-generator/pyproject.toml
@@ -89,3 +89,15 @@ module = [
 ]
 ignore_errors = true
 follow_imports = "skip"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+markers = [
+    "asyncio: mark test as async",
+    "integration: mark test as integration test (requires MongoDB/Redis)",
+    "performance: mark test as performance test (requires MongoDB/Redis)"
+]
+# Unit tests only (skip integration and performance tests)
+addopts = "-m 'not (integration or performance)' -q"
+testpaths = ["tests"]
