--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "@web/test-runner": "^0.20.2",
     "@web/test-runner-playwright": "^0.11.1",
     "axe-playwright": "^2.2.2",
+    "cors": "^2.8.5",
     "cross-env": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
@@ -71,9 +72,11 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^10.1.10",
     "eslint-plugin-wc": "^3.0.2",
+    "express": "^5.2.1",
     "fake-indexeddb": "^6.0.1",
     "happy-dom": "^20.0.11",
     "lighthouse": "^13.0.1",
+    "msw": "^2.12.7",
     "playwright": "^1.48.0",
     "prettier": "^3.4.2",
     "storybook": "^10.1.10",
@@ -82,5 +85,10 @@
     "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.16"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
