--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,8 @@ MONGODB_ENCRYPTION_LOCAL_MODE=false
 
 # Python Generator (генератор заданий / Explanation API)
 PYTHON_API_PORT=9000
+# CORS разрешенные origins (через запятую)
+CORS_ALLOWED_ORIGINS=http://localhost:4173,http://localhost:8081,http://localhost:3000
 YANDEXGPT_API_KEY=<YOUR_YANDEXGPT_API_KEY>
 YANDEXGPT_FOLDER_ID=<YOUR_YANDEX_FOLDER_ID>
 YANDEXGPT_MODEL=yandexgpt-lite
