--- a/backend/rust-api/.gitignore
+++ b/backend/rust-api/.gitignore
@@ -1,4 +1,5 @@
 /target
-/Cargo.lock
+# Cargo.lock должен быть в git для binary/application проектов
+# /Cargo.lock - закомментировано для приложений
 .env
 *.log
