--- a/.env.example
+++ b/.env.example
@@ -107,7 +107,7 @@ ANTICHEAT_INCIDENT_WEBHOOK_URL=
 # Alertmanager webhook/Telegram
 ALERTMANAGER_TELEGRAM_BOT_TOKEN=
 ALERTMANAGER_TELEGRAM_CHAT_ID=
-ALERTMANAGER_WEBHOOK_URL=
+ALERTMANAGER_WEBHOOK_URL=http://localhost:8999/alertmanager/webhook
 
 # Object Storage (report exports)
 OBJECT_STORAGE_BUCKET=<YOUR_BUCKET_NAME>
